--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "poyro",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -10,12 +11,14 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "latest"
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "prettier": "^3.3.1",
+    "turbo": "latest",
+    "ts-node": "^10.9.2"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
-  },
-  "name": "kitchen-sink"
+  }
 }
