--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@next/eslint-plugin-next": "^14.2.3",
     "@poyro/jest": "workspace:*",
@@ -41,6 +42,7 @@
     "@types/supertest": "^6.0.2",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
