--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "poyro",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo run build",
     "clean": "turbo run clean",
@@ -8,14 +9,18 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "husky": "^9.0.11",
     "prettier": "^3.3.1",
-    "turbo": "latest",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "turbo": "latest"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
