fix: make sure that the 'scripts' directory is included in the package

--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -12,7 +12,9 @@
     "next.config.cjs",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".eslintrc.cjs",
+    "vitest.config.js"
   ],
   "exclude": ["node_modules"]
 }
