--- a/turbo.json
+++ b/turbo.json
@@ -11,10 +11,10 @@
       "dependsOn": []
     },
     "lint": {
-      "dependsOn": ["^build"]
+      "dependsOn": []
     },
     "typecheck": {
-      "dependsOn": ["^build"]
+      "dependsOn": []
     },
     "dev": {
       "dependsOn": ["^build"],
