--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poyro/vitest",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "sideEffects": false,
   "main": "./dist/index.mjs",
@@ -8,6 +8,7 @@
   "files": [
     "constants/**",
     "dist/**",
+    "scripts/**",
     "constants.json"
   ],
   "scripts": {
