--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.5",
     "@vitest/expect": "^1.6.0",
     "tsup": "^8.1.0",
     "typescript": "^5.4.5"
@@ -37,6 +37,6 @@
   "dependencies": {
     "handlebars": "^4.7.8",
     "node-fetch": "^3.3.2",
-    "node-llama-cpp": "^2.8.11"
+    "node-llama-cpp": "3.0.0-beta.32"
   }
 }
