--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poyro/vitest",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "sideEffects": false,
   "main": "./dist/index.mjs",
@@ -11,6 +11,9 @@
     "scripts/**",
     "constants.json"
   ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist",
@@ -29,10 +32,10 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "handlebars": ">= 4.7.8",
     "vitest": ">= 1.6.0"
   },
   "dependencies": {
+    "handlebars": "^4.7.8",
     "node-fetch": "^3.3.2",
     "node-llama-cpp": "^2.8.11"
   }
