refactor: move the model from /bin folder to /node_modules/.cache for improved DX

--- a/packages/vitest/tsconfig.json
+++ b/packages/vitest/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2015"],
+    "target": "ES2017",
     "outDir": "./dist",
     "types": ["node"]
   },
