--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -6,9 +6,7 @@
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "files": [
-    "constants/**",
     "dist/**",
-    "scripts/**",
     "constants.json"
   ],
   "engines": {
@@ -20,8 +18,7 @@
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
-    "test": "vitest",
-    "postinstall": "node ./scripts/downloadModel.mjs"
+    "test": "vitest"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -35,6 +32,8 @@
     "vitest": ">= 1.6.0"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
+    "find-cache-dir": "^5.0.0",
     "handlebars": "^4.7.8",
     "node-fetch": "^3.3.2",
     "node-llama-cpp": "3.0.0-beta.32"
