test: add in-context tests and delete the 'demo' app in favor of the 'nextjs-vitest-poyro-demo' repo externally

--- a/packages/vitest/tsconfig.json
+++ b/packages/vitest/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2015"],
-    "target": "ES2017",
+    "target": "ESNext",
     "outDir": "./dist",
     "types": ["node"]
   },
