--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -2,6 +2,7 @@
   "name": "@poyro/vitest",
   "version": "0.2.0",
   "license": "MIT",
+  "type": "module",
   "sideEffects": false,
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
