chore: update tsconfig.json to target ES2022 rather than ESNext to maximize compat

--- a/packages/vitest/tsconfig.json
+++ b/packages/vitest/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2015"],
-    "target": "ESNext",
+    "target": "ES2022",
     "outDir": "./dist",
     "types": ["node"]
   },
