--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
-  "main": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist/**",
     "constants.json"
