--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "find-cache-dir": "^5.0.0",
+    "flatted": "^3.3.1",
     "handlebars": "^4.7.8",
     "node-fetch": "^3.3.2",
     "node-llama-cpp": "3.0.0-beta.32"
