--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poyro/vitest",
-  "version": "0.3.0-beta.5",
+  "version": "0.3.0",
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
