--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-highlight-words": "^0.16.4",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.12",
     "clsx": "^2.1.0",
     "fast-glob": "^3.2.12",
