--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,11 +2,11 @@
   "name": "poyro",
   "version": "0.3.1",
   "license": "MIT",
+  "type": "module",
   "sideEffects": false,
-  "main": "./dist/index.mjs",
+  "bin": "./dist/index.js",
   "types": "./dist/index.d.mts",
   "files": [
-    "constants/**",
     "dist/**"
   ],
   "engines": {
@@ -17,13 +17,24 @@
     "clean": "rm -rf dist",
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "vitest"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.14.5",
+    "@types/yargs": "^17.0.32",
     "tsup": "^8.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2",
+    "vitest": ">= 1.6.0"
+  },
+  "dependencies": {
+    "@inquirer/prompts": "^5.0.7",
+    "chalk": "^5.3.0",
+    "fast-glob": "^3.2.12",
+    "jscodeshift": "^0.16.1",
+    "yargs": "^17.7.2",
+    "typescript": ">= 4"
   }
 }
