ci: rename the branch-specific github action task to 'pull_request' for improved clarity

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -8,7 +8,7 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  release:
+  pull_request:
     name: Release
     runs-on: ubuntu-latest
     steps:
