--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poyro/vitest",
-  "version": "0.4.0-beta.0",
+  "version": "0.4.0-beta.1",
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
@@ -8,7 +8,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**",
-    "constants.json"
+    "constants.json",
+    "config.js"
   ],
   "engines": {
     "node": ">=20.0.0"
