feat: add new entrypoint for functions at '@poyro/vitest/functions'

--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -21,6 +21,10 @@
     "./config": {
       "types": "./dist/config.d.ts",
       "default": "./dist/config.js"
+    },
+    "./functions": {
+      "types": "./dist/functions.d.ts",
+      "default": "./dist/functions.js"
     }
   },
   "engines": {
