--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -36,7 +36,7 @@
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
-    "test": "vitest"
+    "test": "vitest --pool forks --no-file-parallelism --reporter verbose"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
