--- a/packages/vitest/package.json
+++ b/packages/vitest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poyro/vitest",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
@@ -21,6 +21,10 @@
     "./config": {
       "types": "./dist/config.d.ts",
       "default": "./dist/config.js"
+    },
+    "./fn": {
+      "types": "./dist/functions.d.ts",
+      "default": "./dist/functions.js"
     }
   },
   "engines": {
@@ -32,7 +36,7 @@
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
-    "test": "vitest"
+    "test": "vitest --pool forks --no-file-parallelism --reporter verbose"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
