--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Test
         run: pnpm test:ci
+        env:
+          POYRO_API_KEY: ${{ secrets.POYRO_API_KEY }}
 
       - name: Build
         run: pnpm build
