feat: add remote configuration (#74)
* feat: add remote configuration

* ci: add testing for CI

* use console.log instead of process.stdout in ci

* refactor: don't invoke download if we're in CI

* chore: use production server for remote calls

* chore: changeset

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -32,5 +32,10 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+      - name: Test
+        run: pnpm test:ci
+        env:
+          POYRO_API_KEY: ${{ secrets.POYRO_API_KEY }}
+
       - name: Build
         run: pnpm build
