--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+      - name: Test
+        run: pnpm test:ci
+        env:
+          POYRO_API_KEY: ${{ secrets.POYRO_API_KEY }}
+
       - name: Build
         run: pnpm build
 
