--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -42,6 +42,7 @@
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "sharp": "0.33.4"
+    "sharp": "0.33.4",
+    "sitemap": "^8.0.0"
   }
 }
